# tmv4.0

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.example-cfp.md  README.md  build.sh  clear.sh  test.csv  test.xlsm
data/: encoder.cfg
source/app/: CMakeLists.txt  decode.cpp  encode.cpp  metrics.cpp  simplify.cpp
source/app/gtests/: colourConvert.cpp  common.hpp  decode.cpp  draco.cpp  encode.cpp  fitsubdiv.cpp  gengof.cpp  hm.cpp  main.cpp  metrics.cpp  reparametrization.cpp  simplify.cpp
source/app/original/: fitsubdiv.cpp  gengof.cpp  simplify.cpp  uvatlas.cpp  vmcdec.cpp  vmcenc.cpp
source/app/tests/: allchain.cpp  colourConvert.cpp  common.hpp  decode.cpp  draco.cpp  encode.cpp  first.cpp  gengof.cpp  geometryDecimate.cpp  geometryParametrization.cpp  hm.cpp  main.cpp  metrics.cpp  textureParametrization.cpp
source/app/unitTesting/: colourConverter.cpp  dracoDecoder.cpp  dracoEncoder.cpp  metrics.cpp  videoDecoder.cpp  videoEncoder.cpp
source/app/unitTests/: colourConvert.cpp  common.hpp  draco.cpp  hm.cpp  main.cpp  metrics.cpp  vmesh.cpp
source/app/vdmcAppDecoder/: CMakeLists.txt  decoder.cpp
source/app/vdmcAppEncoder/: CMakeLists.txt  encoder.cpp
source/app/vdmcAppFitsubdiv/: CMakeLists.txt  fitsubdiv.cpp
source/app/vdmcAppGengof/: CMakeLists.txt  gengof.cpp
source/app/vdmcAppMetrics/: CMakeLists.txt
source/app/vdmcAppSimplify/: CMakeLists.txt
source/app/vdmcAppUvatlas/: CMakeLists.txt
source/app/wrapper/: colourConverter.cpp  dracoDecoder.cpp  dracoEncoder.cpp  ebDecode.cpp  ebEncode.cpp  metrics.cpp  objToPlyConvert.cpp  videoDecoder.cpp  videoEncoder.cpp
source/lib/vdmcDecoder/: CMakeLists.txt  decoder.cpp  decoder.hpp
source/lib/vdmcEncoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  fitsubdiv.cpp  fitsubdiv.hpp  geometryDecimate.cpp  geometryDecimate.hpp  geometryParametrization.cpp  geometryParametrization.hpp  reparametrization.cpp  reparametrization.hpp  sequenceInfo.cpp  sequenceInfo.hpp  simplifyMesh.cpp  simplifyMesh.hpp  simplifyer.cpp  simplifyer.hpp  simplifymesh.cpp  textureParametrization.hpp  triangleMeshDecimator.cpp  triangleMeshDecimator.hpp
source/lib/vdmcLibCommon/: CMakeLists.txt  bitstream.hpp  contexts.hpp  entropydirac.hpp  image.cpp  image.hpp  mesh.hpp  metrics.cpp  metrics.hpp  mutablepriorityheap.hpp  vector.hpp  verbose.cpp  version.cpp.in  vmc.hpp
source/lib/vdmcLibEncoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  simplifymesh.hpp
source/lib/vdmcLibMetrics/: CMakeLists.txt  metrics.cpp  metrics.hpp
source/lib/vmeshEncoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  geometryDecimate.cpp  geometryDecimate.hpp  geometryParametrization.cpp  geometryParametrization.hpp  sequenceInfo.cpp  sequenceInfo.hpp  textureParametrization.cpp  textureParametrization.hpp  transferColor.cpp  transferColor.hpp  triangleMeshDecimator.cpp  triangleMeshDecimator.hpp
source/wrapper/colorConverterWrapper/: CMakeLists.txt  hdrToolsLibColorConverter.cpp  hdrToolsLibColorConverter.hpp  hdrToolsLibColorConverterImpl.cpp  hdrToolsLibColorConverterImpl.hpp  internalColorConverter.cpp  internalColorConverter.hpp  virtualColorConverter.hpp
source/wrapper/geometryEncoderWrapper/: CMakeLists.txt  dracoLibGeometryEncoder.cpp  dracoLibGeometryEncoder.hpp  virtualGeometryEncoder.cpp  virtualGeometryEncoder.hpp
source/wrapper/videoDecoder/: CMakeLists.txt  ffmpegLibVideoDecoder.cpp  ffmpegLibVideoDecoder.hpp  hmLibVideoDecoder.cpp  hmLibVideoDecoder.hpp  hmLibVideoDecoderImpl.cpp  hmLibVideoDecoderImpl.hpp  hmVideoDecoder.cpp  hmVideoDecoder.hpp  hmVideoDecoderImpl.cpp  hmVideoDecoderImpl.hpp  videoDecoder.cpp  videoDecoder.hpp  virtualVideoDecoder.cpp  virtualVideoDecoder.hpp  vtmLibVideoDecoder.cpp  vtmLibVideoDecoder.hpp  vtmLibVideoDecoderCfg.cpp  vtmLibVideoDecoderCfg.hpp  vtmLibVideoDecoderImpl.cpp  vtmLibVideoDecoderImpl.hpp  vtmVideoDecoder.cpp  vtmVideoDecoder.hpp  vtmVideoDecoderCfg.cpp  vtmVideoDecoderCfg.hpp  vtmVideoDecoderImpl.cpp  vtmVideoDecoderImpl.hpp  vvVideoDecoder.cpp  vvVideoDecoder.hpp  vvVideoDecoderImpl.cpp  vvVideoDecoderImpl.hpp
source/wrapper/videoDecoderWrapper/: CMakeLists.txt  ffmpegLibVideoDecoder.cpp  ffmpegLibVideoDecoder.hpp  hmLibVideoDecoder.cpp  hmLibVideoDecoder.hpp  hmLibVideoDecoderImpl.cpp  hmLibVideoDecoderImpl.hpp  virtualVideoDecoder.cpp  virtualVideoDecoder.hpp  vtmLibVideoDecoder.cpp  vtmLibVideoDecoder.hpp  vtmLibVideoDecoderImpl.cpp
source/wrapper/videoEncoder/: CMakeLists.txt  ffmpegLibVideoEncoder.cpp  ffmpegLibVideoEncoder.hpp  hmLibVideoEncoder.cpp  hmLibVideoEncoder.hpp  hmLibVideoEncoderCfg.cpp  hmLibVideoEncoderCfg.hpp  hmLibVideoEncoderImpl.cpp  hmLibVideoEncoderImpl.hpp  hmVideoEncoder.cpp  hmVideoEncoderCfg.cpp  hmVideoEncoderCfg.hpp  hmVideoEncoderImpl.cpp  hmVideoEncoderImpl.hpp  videoEncoder.cpp  videoEncoder.hpp  virtualVideoEncoder.cpp  virtualVideoEncoder.hpp  vtmLibVideoEncoder.cpp  vtmLibVideoEncoder.hpp  vtmLibVideoEncoderCfg.cpp  vtmLibVideoEncoderCfg.hpp  vtmLibVideoEncoderImpl.cpp  vtmLibVideoEncoderImpl.hpp  vtmVideoEncoder.cpp  vtmVideoEncoderCfg.cpp  vtmVideoEncoderCfg.hpp  vtmVideoEncoderImpl.cpp  vtmVideoEncoderImpl.hpp  vvVideoEncoder.cpp  vvVideoEncoderImpl.cpp  vvVideoEncoderImpl.hpp
source/wrapper/videoEncoderWrapper/: CMakeLists.txt  ffmpegLibVideoEncoder.cpp  ffmpegLibVideoEncoder.hpp  hmLibVideoEncoder.cpp  hmLibVideoEncoder.hpp  hmLibVideoEncoderCfg.hpp  hmLibVideoEncoderImpl.cpp  hmLibVideoEncoderImpl.hpp  hmVideoEncoderCfg.cpp  virtualVideoEncoder.cpp  virtualVideoEncoder.hpp  vtmLibVideoEncoder.cpp  vtmLibVideoEncoder.hpp  vtmLibVideoEncoderCfg.cpp  vtmLibVideoEncoderCfg.hpp  (+2 more)
vmesh/: CMakeLists.txt  contexts.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  entropy.hpp  entropydirac.cpp  entropydirac.hpp  entropyutils.hpp  fitsubdiv.cpp  gengof.cpp  hls.cpp  simplify.cpp  simplifymesh.cpp  simplifymesh.hpp  uvatlas.cpp  version.cpp.in  vmc.cpp  vmc.hpp  vmcstats.hpp
vmesh/util/: box.hpp  image.cpp  image.hpp  kdtree.hpp  matrix.hpp  mesh.hpp  misc.cpp  misc.hpp  sparsematrix.hpp  triangle.hpp  vector.hpp  verbose.cpp
(+926 files in other folders)
